 * Fix projectiles behaving incorrectly with land just behind the wrap world edge
 * Fix bee weapon becoming unusable when hitting attack key in mid-air
 * Fix hog sometimes getting stuck in land if roping very fast
 * Fix seduction not stopping if hog took damage before attack was complete
 * Limit hedgehog health to 268435455 to prevent some bugs

Game, controls and commands:
 + Add new key to show mission panel (default: M)
 + Add new key to cycle through timer values (default: N)
 + Add default controls for controller (see README.md)
 + Add chat command “/help”, displays help for chat commands
 + Rename chat command “/team” to “/clan” (but “/team” still works)
 * Functionality of controllers restored
 * Fix crash when 2 or more controllers were connected
 * Fix cursor teleporting to center after leaving game with a video recording
 * Fix /hta, /hsa and /hya commands not writing message in chat

Game, audiovisuals:
 + Campaigns and missions now use the user's chosen custom clan colors
 + New default brown clan color for better contrast
 + Allow to change volume during pause
 + Add sounds: flamethrower, landspray, idle freezer, shorykuen hit
 + Add taunts: Amazing, Brilliant, Bugger, Cutitout, Drat, Excellent, Fire, Gonnagetyou, Grenade,
               Hmm, Leavemealone, Ohdear, Ouch, Revenge, Runaway, Solong, Thisoneismine, Whatthe,
               Watchthis
 * Enemy/AI hogs now say “Hmm” on turn start instead of vowing for revenge (at least in most voice packs)
 * Fix extreme amounts of droplets when shooting with minigun into ocean world edge
 * Fix some flakes disappearing in world wrap worlds while moving camera
 * Fix invisible projectile timer, attack bar, target on other side of wrap world edge
 * Fix attack bar drawn over GUI elements
 * Fix video recorder not working when game audio was disabled
 * Fix teleport tooltip claiming it doesn't end turn in hog placing phase with inf. attack
 * Prevent voices from being spoken directly before a victory voice